--- a/shared/api/study_materials/v1/paths/plan.yaml
+++ b/shared/api/study_materials/v1/paths/plan.yaml
@@ -1,31 +1,31 @@
 parameters:
-  - $ref: ../params/city.yaml
+  - $ref: ../params/plan_id.yaml
 
 get:
-  summary: Get weather data for a city
-  operationId: GetWeatherByCity
+  summary: Получить план по идентификатору
+  operationId: GetPlanByID
   tags:
-    - Weather
+    - Plan
   responses:
-    '200':
-      description: Weather information successfully retrieved
+    "200":
+      description: План найден
       content:
         application/json:
           schema:
-            $ref: ../components/weather.yaml
-    '404':
-      description: Weather data for specified city not found
+            $ref: ../components/plan_obj.yaml
+    "404":
+      description: План с указанным ID не найден
       content:
         application/json:
           schema:
             $ref: ../components/errors/not_found_error.yaml
-    '400':
+    "400":
       description: Bad request - validation error
       content:
         application/json:
           schema:
             $ref: ../components/errors/bad_request_error.yaml
-    '500':
+    "500":
       description: Internal server error
       content:
         application/json:
@@ -38,31 +38,31 @@ get:
           schema:
             $ref: ../components/errors/generic_error.yaml
 
-put:
-  summary: Update or create weather data for a city
-  operationId: UpdateWeatherByCity
+post:
+  summary: Создать новый план
+  operationId: CreatePlan
   tags:
-    - Weather
+    - Plan
   requestBody:
     required: true
     content:
       application/json:
         schema:
-          $ref: ../components/update_weather_request.yaml
+          $ref: ../components/create_plan_request.yaml
   responses:
-    '200':
-      description: Weather information successfully updated
+    "200":
+      description: План успешно создан
       content:
         application/json:
           schema:
-            $ref: ../components/weather.yaml
-    '400':
+            $ref: ../components/plan_obj.yaml
+    "400":
       description: Bad request - validation error
       content:
         application/json:
           schema:
             $ref: ../components/errors/bad_request_error.yaml
-    '500':
+    "500":
       description: Internal server error
       content:
         application/json:
@@ -73,4 +73,4 @@ put:
       content:
         application/json:
           schema:
-            $ref: ../components/errors/generic_error.yaml 
+            $ref: ../components/errors/generic_error.yaml
